--- a/public/user/assets/style.css
+++ b/public/user/assets/style.css
@@ -25,3 +25,6 @@
 .form-floating>label {
     color: black;
 }
+.border {
+    border: var(--bs-border-width) var(--bs-border-style) rgb(1, 1, 3)!important;
+}
